tests/derivation/core/norec part w_ext 006-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:1
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | export
 10 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty String) => (Fuel -> Gen MaybeEmpty Nat) => Gen MaybeEmpty (String, Nat, String)
                                                                                                              ^^^^^^

